* talk20190405: Sundar's comments

--- a/math/talks/env-talks.tex
+++ b/math/talks/env-talks.tex
@@ -98,7 +98,7 @@
 \definehighlight [okay] [color=indianred]
 \definehighlight [bad] [color=orangered]
 \definehighlight [ugly] [color=lightred]
-\definehighlight [important] [color=slateblue]
+\definehighlight [important] [color=darkblue]
 
 % Emoji
 \def \smile{\symbol[fontawesome][smile]}
