--- a/math/talks/talk20190405.tex
+++ b/math/talks/talk20190405.tex
@@ -35,8 +35,8 @@
 \startalign [middle]
 
 	{\tfd
-		\color[\getvariable{document}{color-foreground-1}]{Generalization of stochastic calculus}\\
-		and its applications in\\
+		\color[\getvariable{document}{color-foreground-1}]{A generalization of Itô calculus}\\
+		and\\
 		\color[\getvariable{document}{color-foreground-2}]{large deviations theory}}
 
 	\blank[2*line]
@@ -127,7 +127,7 @@
 
 	\startitemize [4]
 
-		\item  Definition
+		\item  Definition of the integral:
 			\startitemize [n, joinedup]
 				\item  Step functions \m{f = ∑_{j = 0}^{n-1} c_j 𝟙_{[t_j, t_{j + 1})}(t)}: Define \m{∫_0^T f(t) \d B_t  =  ∑_{j = 0}^{n-1} c_j Δ B_j}, where
 
@@ -136,14 +136,14 @@
 				\item  \m{f ∈ L^2[0, T]}: Use step functions approximating \m{f} to extend the integral \important{a.s.}
 			\stopitemize
 
-		\item  Properties
+		\item  Properties of the integral:
 			\startitemize [5, joinedup]
 				\item  Linear.
 				\item  \good{Gaussian distribution} with mean 0 and variance \m{\norm[f]_{L^2[0, T]}^2} (Itô isometry).
 				\item  Corresponds to the Riemann–Stieltjes integral for continuous functions of bounded variation.
 			\stopitemize
 
-		\item  The associated process \m{I_{\argdotsub} = ∫_0^∙ f(t) \d B_t} has the following properties.
+		\item  Properties of the associated process \m{I_{\argdotsub} = ∫_0^{\argdotsup} f(t) \d B_t}:
 			\startitemize [5, joinedup]
 				\item  continuity
 				\item  martingale
@@ -184,13 +184,13 @@
 
 	\startitemize [4]
 
-		\item  Definition
+		\item  Definition of the integral:
 			\startitemize [n, joinedup]
 				\item  Adapted step processes \m{X_t(ω) = ∑_{j = 0}^{n-1} ξ_j(ω) 𝟙_{[t_j, t_{j + 1})}(t)}: define \m{∫_0^T X_t \d B_t  =  ∑_{j = 0}^{n-1} ξ_j Δ B_j}.
 				\item  \m{X ∈ L^2_{\text{ad}} ([0, T] × Ω)}: use step processes approximating \m{X} to extend the integral \important{in \m{L^2(Ω)}}.
 			\stopitemize
 
-		\item  Properties
+		\item  Properties of the integral:
 			\startitemize [5, joinedup]
 				\item  Linear.
 				\item  Mean 0 and variance \m{\norm[f]_{L^2[0, T]}^2} \good{(Itô isometry)}.
@@ -200,7 +200,7 @@
 						=  \lim ∑_{j = 0}^{n - 1} X_{t_j} Δ B_j}.
 			\stopitemize
 
-		\item  The associated process \m{I_{\argdotsub} = ∫_0^∙ X_t \d B_t} has the following properties.
+		\item  Properties of the associated process \m{I_{\argdotsub} = ∫_0^{\argdotsup} X_t \d B_t}:
 			\startitemize [5, joinedup]
 				\item  continuity
 				\item  martingale
@@ -219,13 +219,13 @@
 
 		\item  Definition: Use sequences of processes in \m{L^2_{\text{ad}} ([0, T] × Ω)} approximating \m{X} in probability to extend the integral \important{in probability}.
 
-		\item  Properties
+		\item  Properties of the integral:
 			\startitemize [5, joinedup]
 				\item  Linear.
 				\item  \bad{Mean and variance? \frown}
 			\stopitemize
 
-		\item  The associated process \m{I_{\argdotsub} = ∫_0^∙ X_t \d B_t} has the following properties.
+		\item  Properties of the associated process \m{I_{\argdotsub} = ∫_0^{\argdotsup} X_t \d B_t}:
 			\startitemize [5, joinedup]
 				\item  continuity
 				\item  \okay{local} martingale
@@ -236,7 +236,7 @@
 	\stopitemize
 \stopslide
 
-\startslide [title={Itô formula}]
+\startslide [title={The Itô formula}]
 
 	\startitemize [4]
 
@@ -277,7 +277,7 @@
 	\stopitemize
 \stopslide
 
-\startslide [title={Exponential processes and Girsanov theorem}]
+\startslide [title={Exponential processes and the Girsanov theorem}]
 
 	\startitemize [4]
 
@@ -337,25 +337,25 @@
 
 		\item  How do we define the double integral?
 
-		\item  Naive idea: \m{∫_0^T ∫_0^T \d B_s \d B_t = ∫_0^T \d B_s ∫_0^T \d B_t = B_T^2}.
+		\item  Naive idea: \m{∫_0^t ∫_0^t \d B_u \d B_v = ∫_0^t \d B_u ∫_0^t \d B_v = B_t^2}.
 
-			But \m{𝔼 B_T^2 = \ugly{t ≠ 0}}, so \ugly{no martingale property}. \frown
+			But \m{𝔼 B_t^2 = \ugly{t ≠ 0}}, so \ugly{no martingale property}. \frown
 
-		\item  Itô's idea: remove the diagonal to get \m{∫_0^T ∫_0^T \d B_s \d B_t  =  2 ∫_0^T ∫_0^t \d B_s \d B_t  =  B_T^2 - T}. \smile
+		\item  Itô's idea: remove the diagonal to get \m{∫_0^t ∫_0^t \d B_u \d B_v  =  2 ∫_0^t ∫_0^v \d B_u \d B_v  =  B_t^2 - t}. \smile
 
 	\stopitemize
 
 	\starttheorem[title={\cite[short][Itô1951MWI]}]
 		Let \m{f ∈ L^2([0, T]^n)} and \m{\bad{\hat{f}}} be its symmetrization. Then
 		\startformula
-			∫_{[0, T]^n} f(t_1, …, t_n) \d B_{t_1} … \d B_{t_n}  =  \bad{n!} ∫_0^T ⋯ ∫_0^{\bad{t_{n-2}}} \brnd[∫_0^{\bad{t_{n-1}}} \bad{\hat{f}}(t_1, …, t_n) \d B_{t_n}] \d B_{t_{n-1}} … \d B_{t_1} .
+			∫_{[0, T]^n} f(t_1, …, t_n) \d B_{t_1} ⋯ \d B_{t_n}  =  \bad{n!} ∫_0^T ⋯ ∫_0^{\bad{t_{n-2}}} \brnd[∫_0^{\bad{t_{n-1}}} \bad{\hat{f}}(t_1, …, t_n) \d B_{t_n}] \d B_{t_{n-1}} ⋯ \d B_{t_1} .
 		\stopformula
 		% \m{\hat{f}(t_1, …, t_n)  =  \frac{1}{n!} ∑_{σ ∈ S_n} f(t_{σ(1)}, …, t_{σ(n)})}
 	\stoptheorem
 
-	\startitemize [4]
-		\item  TODO
-	\stopitemize
+	% \startitemize [4]
+	% 	\item  Example: \m{}
+	% \stopitemize
 \stopslide
 
 
@@ -394,7 +394,7 @@
 
 		\item  Note that \m{𝔼(B_T B_t) = T ∧ t = \ugly{t ≠ 0}}, so \ugly{no martingale property} \frown.
 
-		\item  Stochastic differential equations with anticipation
+		\item  Stochastic differential equations with anticipation:
 			% \startitemize [5, joinedup]
 			% 	\item  \m{\d X_t  =  X_t \d B_t, X_0 = B_1}
 			% 	\item  \m{\d Y_t  =  B_T \d B_t, Y_0 = 1}
@@ -409,7 +409,7 @@
 
 		\item  Problem: We want to define \m{∫_0^T X_t \d B_t}, where \m{X_{\argdotsub}} is not adapted (anticipating).
 
-		\item  Some approaches
+		\item  Some approaches:
 		\startitemize [5, joinedup]
 			\item  Itô's decomposition of integrand \m{B_t = \brnd[B_t - ∫_0^t \frac{B_T - B_s}{T - s} \d s] + ∫_0^t \frac{B_T - B_s}{T - s} \d s}
 				% \startformula
@@ -417,6 +417,7 @@
 				% \stopformula
 			\item  Enlargement of filtration
 			\item  White noise theory
+			\item  Malliavin calculus
 			\item  …
 
 				% \m{B_t = \brnd[B_t - ∫_0^t \frac{B_T - B_s}{1 - s} \d s] + ∫_0^T \frac{B_T - B_s}{1 - s} \d s}
@@ -484,7 +485,7 @@
 	\stopitemize
 \stopslide
 
-\startslide [title={Generalized Itô formula \cite[short][HwangKuoSaitôZhai2016]}]
+\startslide [title={A generalized Itô formula \cite[short][HwangKuoSaitôZhai2016]}]
 
 	\starttabulate [|c|m|m|]
 		\NC  Process
@@ -523,7 +524,7 @@
 	\stoptheorem
 \stopslide
 
-\startslide [title={Exponential processes and generalized Girsanov theorem}]
+\startslide [title={Exponential processes and a generalized Girsanov theorem}]
 
 	\startitemize [4]
 
@@ -549,6 +550,8 @@
 			∫_{[0, T]^n} f(t_1, …, t_n) \d B_{t_1} … \d B_{t_n}  =  ∫_0^T ⋯ ∫_0^T f(t_1, …, t_n) \d B_{t_n} … \d B_{t_1} .
 		\stopformula
 	\stoptheorem
+
+	Example\cite[short][HwangKuoSaitôZhai2016]: In the new integral, \m{∫_0^T ∫_0^T B_s \d B_s \d s = ∫_0^T ∫_0^T B_s \d s \d B_s}.
 \stopslide
 
 \startslide [title={Near-martingale property \cite[short][HwangKuoSaitôZhai2017]}]
@@ -568,9 +571,10 @@
 
 	\stopitemize
 
-	\starttheorem [title={\cite[short][HwangKuoSaitôZhai2017]}]
-		Let \m{Z(\argdotmid)} be a stochastic process bounded in \m{L^1}, and \m{X_{\argdotsub} = 𝔼(Z(\argdotmid) ∣ ℱ_{\argdotsub})}. Then \m{X_{\argdotsub}} is a martingale if and only if \m{Z(\argdotmid)} is a near-martingale.
+	\starttheorem %[title={\cite[short][HwangKuoSaitôZhai2017]}]
+		Let \m{Z(\argdotmid)} be a stochastic process bounded in \m{L^1}, and \m{X_{\argdotsub} = 𝔼(Z(\argdotmid) ∣ ℱ_{\argdotsub})}. Then \m{X_{\argdotsub}} is a (\good{sub}/\bad{super})martingale if and only if \m{Z(\argdotmid)} is a near-(\good{sub}/\bad{super})martingale.
 	\stoptheorem
+
 \stopslide
 
 \stopmode
@@ -598,7 +602,7 @@
 
 	\startitemize [4]
 
-		\item  A theory of characterization of rare events by providing exponential bounds on their probability.
+		\item  A theory to find probabilities of rare events that decay exponentially.
 
 		\item  Started by Swedish actuarials Fredrik Esscher, Harald Cramér, Filip Lundberg.
 
@@ -609,9 +613,9 @@
 				\item  Value of claims received on the \m{n}th day: \m{X_n} \$.
 				\item  Steady income from premium: \m{x} \$/day.
 				\item  Planning period: \m{n} days.
-				\item  Average expenditure: \m{\bar{X}_n = \frac1n ∑_{j = 1}^n X_j} \$/day.
+				\item  Average expenditure: \m{\overline{X}_n = \frac1n ∑_{j = 1}^n X_j} \$/day.
 				\item  \emph{Question}: How should the company decide on the premium?
-				\item  \emph{Idea}: Choose \m{x} such that \m{ℙ\bcrl[\bar{X}_n > x]} is exponentially low.
+				\item  \important\emph{Idea}: {Determine \m{x} such that \m{ℙ\bcrl[\overline{X}_n > x] < ε} (specified)}.
 			\stopitemize
 	\stopitemize
 \stopslide
@@ -624,18 +628,18 @@
 				\item  \m{(Ω, ℱ, ℙ)} is a probability space.
 				\item  \m{(X_n)} is a sequence of i.i.d. random variables on \m{(Ω, ℱ, ℙ)} with finite moment generating function \m{M}.
 				\item  \important{\m{𝔼 X_1 = m}}, \m{𝕍 X_1 = σ^2}, and \m{X_1 ∼ μ}.
-				\item  \m{\bar{X}_n = \frac1n ∑_{j = 1}^n X_j}.
+				\item  \m{\overline{X}_n = \frac1n ∑_{j = 1}^n X_j}.
 			\stopitemize
 
-		\item  Asymptotic behavior of \m{\bar{X}_n}:
+		\item  Asymptotic behavior of \m{\overline{X}_n}:
 			\startitemize [5, joinedup]
-				\item  Weak law of large numbers: \m{\bar{X}_n \xrightarrow{ℙ} m}.
-				\item  Central limit theorem: \m{\sqrt{n} (\bar{X}_n - m) \xrightarrow{𝓓} 𝓝(0, σ^2)}.
+				\item  \important{Weak law of large numbers: \m{\overline{X}_n \xrightarrow{ℙ} m}}.
+				\item  Central limit theorem: \m{\sqrt{n} (\overline{X}_n - m) \xrightarrow{𝓓} 𝓝(0, σ^2)}.
 			\stopitemize
 
-		\item  But at what rate?
+		\item  What is the rate for LLN?
 
-		\item  We want to \quotation{control large deviations from the mean}.
+		% \item  We want to \quotation{control large deviations from the mean}.
 	\stopitemize
 \stopslide
 
@@ -644,16 +648,16 @@
 	\startitemize [n]
 		\item  For \m{x > m} and an arbitrary \m{θ > 0}, we get
 			\startformula
-				ℙ\bcrl[\bar{X}_n ≥ x]
-				=  ℙ\bcrl[e^{θn\bar{X}_n} ≥ e^{θnx}]
-				≤  e^{-θnx} 𝔼\brnd[e^{θn\bar{X}_n}]
+				ℙ\bcrl[\overline{X}_n ≥ x]
+				=  ℙ\bcrl[e^{θn\overline{X}_n} ≥ e^{θnx}]
+				≤  e^{-θnx} 𝔼\brnd[e^{θn\overline{X}_n}]
 				=  e^{-θnx} M_{X}(θ)^n
 				=  e^{-n(θx - \log M_{X}(θ))} .
 			\stopformula
 
 		\item  Since \m{θ} was arbitrary, we have
 			\startformula
-				ℙ\bcrl[\bar{X}_n ≥ x]
+				ℙ\bcrl[\overline{X}_n ≥ x]
 				≤  \inf_θ e^{-n(θx - \log M_{X}(θ))}
 				=  e^{-n \sup_θ (θx - \log M_{X}(θ))}
 				=: e^{-n I(x)} .
@@ -661,15 +665,15 @@
 
 		\item  Generalizing, we get the \important{large deviation upper bound}
 			\startformula
-				\limsupm \frac1n \log ℙ\bcrl[\bar{X}_n ∈ E]  ≤  -\inf_{\clsr[E]} I  \qquad  ∀ E ∈ 𝓑 .
+				\important{\limsupm \frac1n \log ℙ\bcrl[\overline{X}_n ∈ F]  ≤  -\inf_F I  \qquad  ∀ F \text{ closed}} .
 			\stopformula
 
-		\item  We can also obtain a lower bound using an exponential change of measure
+		\item  We can also obtain a \important{large deviation lower bound} using an exponential change of measure
 			\startformula
-				\liminfm \frac1n \log ℙ\bcrl[\bar{X}_n ∈ E]  ≥  -\inf_{\intr[E]} I  \qquad  ∀ E ∈ 𝓑 .
+				\important{\liminfm \frac1n \log ℙ\bcrl[\overline{X}_n ∈ G]  ≥  -\inf_G I  \qquad  ∀ G \text{ open}} .
 			\stopformula
 
-		\item  We formally write \m{ℙ\bcrl[\bar{X}_n ∈ \d x] ≍ e^{-n I(x)} \d x} for \m{x ∈ ℝ}.
+		\item  We (in)formally write \m{ℙ\bcrl[\overline{X}_n ∈ \d x] ≍ e^{-n I(x)} \d x} for \m{x ∈ ℝ}.
 	\stopitemize
 \stopslide
 
@@ -687,12 +691,144 @@
 	\stopitemize
 
 	\startdefinition
-		\m{(X_n)} is said to satisfy the \important{large deviation principle on \m{𝓧} with rate function \m{I}} if the following two conditions hold.
-		\startformula \startalign[n=4]
-			\NC  \text{(upper bound)}  \qquad  \NC  \limsupm \frac1n \log ℙ\bcrl[\bar{X}_n ∈ F]  \NC ≤  -\inf_{F} I  \NC  \qquad  ∀ F \text{ closed}  \NR
-			\NC  \text{(lower bound)}  \qquad  \NC  \liminfm \frac1n \log ℙ\bcrl[\bar{X}_n ∈ E]  \NC ≥  -\inf_{G} I  \NC  \qquad  ∀ G \text{ open}
-		\stopalign \stopformula
+		\m{(X_n)} is said to satisfy the \important{large deviation principle on \m{𝓧} with rate function \m{I}} if the large deviation \okay{upper} and \okay{lower} bounds hold.
+		% \startformula \startalign[n=4]
+		% 	\NC  \text{(upper bound)}  \qquad  \NC  \limsupm \frac1n \log ℙ\bcrl[\overline{X}_n ∈ F]  \NC ≤  -\inf_{F} I  \NC  \qquad  ∀ F \text{ closed}  \NR
+		% 	\NC  \text{(lower bound)}  \qquad  \NC  \liminfm \frac1n \log ℙ\bcrl[\overline{X}_n ∈ G]  \NC ≥  -\inf_{G} I  \NC  \qquad  ∀ G \text{ open}
+		% \stopalign \stopformula
 	\stopdefinition
+
+	Example
+	\starttheorem [title={\cite[short][Cramér1938]}]
+		Let \m{(X_n)} be a sequence of i.i.d. real random variables with finite moment generating function \m{M}. Then \m{(X_n)} follows large deviation principle with rate function \m{I(x) = \sup_θ \brnd[θ x - \log M(θ)]}.
+	\stoptheorem
+\stopslide
+
+\startslide [title={Applications of the Cramér theorem}]
+
+	Rate functions for some common distributions
+	% \placetable[force,none]{}{%    % This centers the table
+	\starttabulate [|M|M|M|]
+		\FL
+		\NC  \text{Distribution}  \NC  M(θ)  \NC  I(x)  \NR
+		\FL
+		\NC  \text{Bernoulli}(p)  \NC  1 - p + p e^θ  \NC  \brnd[x \log x + (1-x) \log(1-x) - {\brnd[x \log \frac{1-p}{p} + \log{p}]}] 𝟙_{[0, 1]}(x) + ∞ 𝟙_{[0, 1]^∁}(x)  \NR \NR
+		\NC  \text{Poisson}(λ)  \NC  e^{λ(e^θ - 1)}  \NC  \brnd[λ - x + x \log \frac{x}{λ}] 𝟙_{[0, ∞)}(x) + ∞ 𝟙_{(-∞, 0)}(x)  \NR \NR
+		\NC  Exp(λ)   \NC  \inv[{\brnd[1 - \frac{θ}{λ}]}]  \NC  \brnd[λx - 1 + x \log(λ x)] 𝟙_{[0, ∞)}(x) + ∞ 𝟙_{(-∞, 0)}(x)  \NR \NR
+		\NC  𝓝(m, σ^2)  \NC  e^{m θ + \frac12 σ^2 θ^2}  \NC  \frac{(x - m)^2}{2 σ^2}  \NR \NR
+		\NC  χ^2(k)  \NC  (1 - 2 θ)^{-\frac{k}{2}}  \NC  \frac12 \brnd[x - k + k \log\frac{k}{x}]  \NR
+		\BL
+	\stoptabulate%}
+	% ToDo: Add more.
+	% ToDo: Add the computation in the appendix.
+\stopslide
+
+\startslide [title={The Schilder theorem}]
+
+	\startitemize [4]
+
+		\item  Aim: Estimate the probability that a scaled-down sample path of a \important{Brownian motion} will stray far from the mean path.
+
+		\item  Let \m{B_{\argdotsub}} be a \m{d}-dimensional Brownian motion, so \m{B_{\argdotsub} ∈ C_0 = C_0([0, T]; ℝ^d)}
+
+		\item  \m{∀ ε > 0}, let \m{\sqrt{ε} B_t ∼ W^{(ε)}}. Then \m{W^{(ε)} = 𝓝(0, ε t) \xrightarrow{𝓓} δ_0} as \m{ε → 0}.
+		% This scales down the variance of the Brownian motion to \m{ε t}.
+
+		\item  Let \m{\text{CM} = \bcrl[ω ∈ C_0 : ω \text{ is absolutely continuous and } ω_t' ∈ L^2{[0, T]}]}.
+	\stopitemize
+
+	\starttheorem [title={\cite[short][Schilder1966]}]
+		On the Banach space \m{\brnd[C_0, {\norm[⋅]}_∞]}, the family of probability measures \m{\bcrl[W^{(ε)} : ε > 0]} satisfies LDP with the rate function \m{I : C_0 → \clsr[ℝ]} given by
+		\startformula
+			I(ω)  =  \brnd[\frac12 ∫_0^T {\abs[ω_t']}^2 \d t] 𝟙_{\text{CM}}(ω) + ∞ 𝟙_{\text{CM}^∁}(ω)
+		\stopformula
+	\stoptheorem
+\stopslide
+
+\startslide [title={The Freidlin–Wentzell theorem}]
+
+	\startitemize [4]
+
+		\item  Aim: Estimate the probability that a scaled-down sample path of an \important{Itô diffusion} will stray far from the mean path.
+
+		\item  \m{∀ ε > 0}, let \m{X^{(ε)}_{\argdotsub}} be the solution of the \m{d}-dimensional stochastic differential equation
+
+			\important{\m{\d X^{(ε)}_t = m(X^{(ε)}_t) \d t + \sqrt{ε} σ(X^{(ε)}_t) \d B_t , \ X^{(ε)}_0 = x}},
+			where \m{m, σ} are sufficiently nice.
+
+		\item  Let \m{W^{(ε)}_x} denote the law of \m{X^{(ε)}_{\argdotsub}} starting at \m{x}.
+
+		\item  As \m{ε → 0}, \m{W^{(ε)}_x \xrightarrow{𝓓} δ_ξ}, where \m{ξ} solves the ODE \m{\dot{ξ}(t) = m(ξ(t)), \ ξ(0) = x}.
+
+		\item  Let \m{\text{CM}_x = \bcrl[ω ∈ C_x : ω \text{ is absolutely continuous and } ω_t' ∈ L^2{[0, T]}]}.
+	\stopitemize
+
+	% Generalizes the Schilder theorem for Itô diffusions.
+
+	\starttheorem
+		For \m{x} fixed, the family of probability measures \m{\bcrl[W^{(ε)}_x : ε > 0]} satisfies LDP with the rate function \m{I_x : C_0 → \clsr[ℝ]} given by
+		\startformula
+			I_x(ω)  =  \brnd[\frac12 ∫_0^T {\inn[ω_t' - b(ω_t), {\inv[A](ω_t)}{\brnd[ω_t' - b(ω_t)]}]} \d t] 𝟙_{\text{CM}_x}(ω) + ∞ 𝟙_{\text{CM}_x^∁}(ω) ,
+		\stopformula
+		where \m{A = σ σ^*}.
+	\stoptheorem
+\stopslide
+
+\stopmode
+
+\stopsection
+
+\page    % Needed for correct color transition
+
+
+
+%%%%%%%%%%%%%%
+% Conclusion %
+%%%%%%%%%%%%%%
+
+\setupbackgrounds [page] [
+	background={color,backgraphics,foreground},
+	backgroundcolor=\getvariable{document}{color-background-0}]
+\startcolor [\getvariable{document}{color-foreground-0}]    % text color
+
+\startsection [title={Futher research}, reference=sec:directions]
+
+
+\startmode [presentation]
+
+\startslide [title={Possible research directions}]
+
+	\startcolor [\getvariable{document}{color-foreground-1}]    % text color
+	\startitemize [4]
+		\item  Develop the near-Markov property for the new integral.
+
+		\item  Formulate the extension to stochastic differential equations with anticipating coefficients.
+
+		\item  Identify the class of integrable processes under the new integral.
+
+		\item  Give a broader generalization of the Girsanov theorem.
+	\stopitemize
+
+	\startcolor [\getvariable{document}{color-foreground-2}]    % text color
+	\startitemize [4]
+
+		\item  Prove Freidlin–Wentzell type results for stochastic differential equations with anticipation.
+
+		\item  Study LDP results for SDEs with anticipating coefficients.
+
+		\item  Analyze LDP for linear SPDEs with anticipating initial conditions.
+	\stopitemize
+\stopslide
+
+\startslide
+
+\startalign [middle]
+
+	\blank[4*line]
+
+	{\tfd Thank you!}
+
+\stopalign
 \stopslide
 
 \startslide [title={Laplace principle and equivalence to LDP}]
@@ -718,128 +854,27 @@
 	\stopitemize
 \stopslide
 
-\startslide [title={Cramér theorem}]
-
-	\starttheorem [title={\cite[short][Cramér1938]}]
-		Let \m{(X_n)} be a sequence of i.i.d. real random variables with finite moment generating function \m{M}. Then \m{(X_n)} follows LDP with rate function \m{I(x) = \sup_θ \brnd[θ x - \log M(θ)]}.
-	\stoptheorem
-
-	Rate functions for some common distributions
-	\placetable[force,none]{}{%    % This centers the table
-	\starttabulate [|M|M|M|]
-		\FL
-		\NC  \text{Distribution}  \NC  M(θ)  \NC  I(x)  \NR
-		\FL
-		\NC  Bern(p)  \NC  1 - p + p e^θ  \NC  \brnd[x \log \frac{x}{1 - p} + (x - 1) \log \frac{p}{x - 1}] 𝟙_{[0, 1]}(x) + ∞ 𝟙_{[0, 1]^∁}(x)  \NR
-		\NC  Pois(λ)  \NC  e^{λ(e^θ - 1)}  \NC  \brnd[λ - x + x \log \frac{x}{λ}] 𝟙_{[0, ∞)}(x) + ∞ 𝟙_{(-∞, 0)}(x)  \NR
-		\NC  Exp(λ)   \NC  \inv[{\brnd[1 - \frac{θ}{λ}]}]  \NC  \brnd[λx - 1 + x \log(λ x)] 𝟙_{[0, ∞)}(x) + ∞ 𝟙_{(-∞, 0)}(x)  \NR
-		\NC  𝓝(m, σ^2)  \NC  e^{m θ + \frac12 σ^2 θ^2}  \NC  \frac{(x - m)^2}{2 σ^2}  \NR
-		\NC  χ^2(k)  \NC  (1 - 2 θ)^{-\frac{k}{2}}  \NC  \frac12 \brnd[x - k + k \log\frac{k}{x}]    \NR
-		\BL
-	\stoptabulate}
-	% ToDo: Add more.
-	% ToDo: Add the computation in the appendix.
-\stopslide
-
-% \startslide [title={Sanov theorem}]
-
-% 	\startitemize [4]
-
-% 		\item  \bold{Aim}: Provide a bound on the probability of observing an atypical sequence of samples from a given probability distribution.
-
-% 		\item
-% 	\stopitemize
-% \stopslide
-
-\startslide [title={Schilder theorem}]
+\startslide[title={An application of Schilder theorem}]
 
 	\startitemize [4]
 
-		\item  Aim: Estimate the probability that a scaled-down sample path of a \important{Brownian motion} will stray far from the mean path.
+		\item  \m{W\brnd[C_0 ∖ B_r(0)] = \bcrl[{\norm[B_{\argdotsub}]}_∞ > r]}
 
-		\item  Setup
-		\startitemize [5, joinedup]
-			\item  Let \m{B_{\argdotsub}} be a \m{d}-dimensional Brownian motion, so \m{B_{\argdotsub} ∈ C_0 = C_0([0, T]; ℝ^d)}
-			\item  \m{∀ ε > 0}, let \m{\sqrt{ε} B_t ∼ W^{(ε)}}. Then \m{W^{(ε)} = 𝓝(0, ε t) \xrightarrow{𝓓} δ_0} as \m{ε → 0}.
-			% This scales down the variance of the Brownian motion to \m{ε t}.
-			\item  Let \m{\text{CM} = \bcrl[ω ∈ C_0 : ω \text{ is absolutely continuous and } \dot{ω}_t ∈ L^2{[0, T]}]}.
-		\stopitemize
+		\item  \m{\bcrl[{\norm[B_{\argdotsub}]}_∞ > r]}
 	\stopitemize
-
-	\starttheorem
-		On the Banach space \m{\brnd[C_0, {\norm[⋅]}_∞]}, the family of probability measures \m{\bcrl[W^{(ε)} : ε > 0]} satisfies LDP with the rate function \m{I : C_0 → \clsr[ℝ]} given by
-		\startformula
-			I(ω)  =  \brnd[\frac12 ∫_0^T {\abs[\dot{ω}(t)]}^2 \d t] 𝟙_{\text{CM}}(ω) + ∞ 𝟙_{\text{CM}^∁}(ω)
-		\stopformula
-	\stoptheorem
 \stopslide
 
-% \startslide[title={An application of Schilder theorem}]
+\startslide[title={Using the continuity principle to extend the Schilder theorem}]
+	TODO
+\stopslide
 
-% 	\startitemize [4]
-
-% 		\item  \m{W\brnd[C_0 ∖ B_r(0)] = \bcrl[{\norm[B_{\argdotsub}]}_∞ > r]}
-
-% 		\item  \m{\bcrl[{\norm[B_{\argdotsub}]}_∞ > r]}
-% 	\stopitemize
-% \stopslide
-
-\startslide [title={Freidlin–Wentzell theorem}]
+\startslide [title={Sanov theorem}]
 
 	\startitemize [4]
 
-		\item  Aim: Estimate the probability that a scaled-down sample path of an \important{Itô diffusion} will stray far from the mean path.
+		\item  \bold{Aim}: Provide a bound on the probability of observing an atypical sequence of samples from a given probability distribution.
 
-		\item  Setup
-			\startitemize [5, joinedup]
-				\item  \m{∀ ε > 0}, let \m{X^{(ε)}_{\argdotsub}} be the solution of the SDE \m{\d X^{(ε)}_t = m(X^{(ε)}_t) \d t + σ(X^{(ε)}_t) \sqrt{ε} \d B_t , \ X^{(ε)}_0 = x}, where \m{m, σ} are sufficiently nice.
-				\item  Let \m{W^{(ε)}_x} denote the law of \m{X^{(ε)}_{\argdotsub}} starting at \m{x}.
-
-				\item  As \m{ε → 0}, \m{W^{(ε)}_x \xrightarrow{𝓓} δ_ξ}, where \m{ξ} solves the ODE \m{\dot{ξ}(t) = m(ξ(t)), \ ξ(0) = x}.
-			\stopitemize
-	\stopitemize
-
-	% Generalizes the Schilder theorem for Itô diffusions.
-
-	\starttheorem
-		For \m{x} fixed, the family of probability measures \m{\bcrl[W^{(ε)}_x : ε > 0]} satisfies LDP with the rate function \m{I_x : C_0 → \clsr[ℝ]} given by
-		\startformula
-			I_x(ω)  =  \brnd[\frac12 ∫_0^T {\inn[\dot{ω}_t - b(ω_t), {\inv[A](ω_t)}{\brnd[\dot{ω}_t - b(ω_t)]}]} \d t] 𝟙_{\text{CM} ∩ \bcrl[ω_0 = x]}(ω) + ∞ 𝟙_{CM^∁ ∪ {\bcrl[ω_0 ≠ x]}}(ω) ,
-		\stopformula
-		where \m{A = σ σ^*}.
-	\stoptheorem
-\stopslide
-
-\stopmode
-
-\stopsection
-
-\page    % Needed for correct color transition
-
-
-
-%%%%%%%%%%%%%%
-% Conclusion %
-%%%%%%%%%%%%%%
-
-\setupbackgrounds [page] [
-	background={color,backgraphics,foreground},
-	backgroundcolor=\getvariable{document}{color-background-0}]
-\startcolor [\getvariable{document}{color-foreground-0}]    % text color
-
-\startsection [title={Possible directions}, reference=sec:directions]
-
-
-\startmode [presentation]
-
-\startslide [title={Open problems}]
-
-	\startitemize [4]
-		\item  Near-Markov property.
-		\item  Extension to stochastic differential equations with anticipating coefficients.
-		\item  Freidlin–Wentzell type results for stochastic differential equations with anticipation.
-		\item  Identification of the class of integrable processes under the new integral.
-		\item  Girsanov theorem for anticipating integrals.
+		\item
 	\stopitemize
 \stopslide
 
