--- a/math/Itô.bib
+++ b/math/Itô.bib
@@ -2,7 +2,7 @@
 	address = "Tokyo, Japan",
 	author = "Itô, Kiyosi",
 	booktitle = "Stochastic Analysis and Related Topics in Kyoto: In honour of Kiyosi Itô",
-	pages = "1--1",
+	pages = "1–1",
 	publisher = "Mathematical Society of Japan",
 	title = "A note of thanks by K. Itô",
 	url = "https://projecteuclid.org/euclid.aspm/1546542600",
@@ -12,7 +12,7 @@
 	address = "Berkeley, Calif.",
 	author = "Itô, Kiyosi",
 	booktitle = "Proceedings of the Sixth Berkeley Symposium on Mathematical Statistics and Probability, Volume 3: Probability Theory",
-	pages = "225--239",
+	pages = "225–239",
 	publisher = "University of California Press",
 	title = "Poisson point processes attached to Markov processes",
 	url = "https://projecteuclid.org/euclid.bsmsp/1200514340",
@@ -22,7 +22,7 @@
 	author = "Itô, Kiyosi",
 	fjournal = "Nagoya Mathematical Journal",
 	journal = "Nagoya Math. J.",
-	pages = "181--183",
+	pages = "181–183",
 	publisher = "Nagoya Mathematical Journal",
 	title = "The topological support of Gauss measure on Hilbert space",
 	url = "https://projecteuclid.org:443/euclid.nmj/1118797973",
@@ -36,7 +36,7 @@
 	journal = "J. Math. Soc. Japan",
 	month = "04",
 	number = "1-2",
-	pages = "130--150",
+	pages = "130–150",
 	publisher = "Mathematical Society of Japan",
 	title = "The canonical modification of stochastic processes",
 	url = "https://doi.org/10.2969/jmsj/02010130",
@@ -48,7 +48,7 @@
 	fjournal = "Osaka Journal of Mathematics",
 	journal = "Osaka J. Math.",
 	number = "1",
-	pages = "35--48",
+	pages = "35–48",
 	publisher = "Osaka University and Osaka City University, Departments of Mathematics",
 	title = "On the convergence of sums of independent Banach space valued random variables",
 	url = "https://projecteuclid.org:443/euclid.ojm/1200692040",
@@ -59,7 +59,7 @@
 	address = "Berkeley, Calif.",
 	author = "Itô, Kiyosi",
 	booktitle = "Proceedings of the Fifth Berkeley Symposium on Mathematical Statistics and Probability, Volume 2: Contributions to Probability Theory,  Part 1",
-	pages = "145--161",
+	pages = "145–161",
 	publisher = "University of California Press",
 	title = "Generalized uniform complex measures in the Hilbertian metric space with their application to the Feynman integral",
 	url = "https://projecteuclid.org/euclid.bsmsp/1200513268",
@@ -72,7 +72,7 @@
 	fjournal = "Journal of Mathematics of Kyoto University",
 	journal = "J. Math. Kyoto Univ.",
 	number = "1",
-	pages = "1--75",
+	pages = "1–75",
 	publisher = "Duke University Press",
 	title = "On stationary solutions of a stochastic differential equation",
 	url = "https://doi.org/10.1215/kjm/1250524705",
@@ -85,7 +85,7 @@
 	fjournal = "Journal of Mathematics of Kyoto University",
 	journal = "J. Math. Kyoto Univ.",
 	number = "2",
-	pages = "207--216",
+	pages = "207–216",
 	publisher = "Duke University Press",
 	title = "The expected number of zeros of continuous stationary Gaussian processes",
 	url = "https://doi.org/10.1215/kjm/1250524817",
@@ -96,7 +96,7 @@
 	address = "Berkeley, Calif.",
 	author = "Itô, Kiyosi",
 	booktitle = "Proceedings of the Fourth Berkeley Symposium on Mathematical Statistics and Probability, Volume 2: Contributions to Probability Theory",
-	pages = "227--238",
+	pages = "227–238",
 	publisher = "University of California Press",
 	title = "Wiener Integral and Feynman Integral",
 	url = "https://projecteuclid.org/euclid.bsmsp/1200512604",
@@ -109,7 +109,7 @@
 	journal = "Illinois J. Math.",
 	month = "03",
 	number = "1",
-	pages = "119--132",
+	pages = "119–132",
 	publisher = "Duke University Press",
 	title = "Potentials and the random walk",
 	url = "https://doi.org/10.1215/ijm/1255455738",
@@ -120,7 +120,7 @@
 	address = "Berkeley, Calif.",
 	author = "Itô, Kiyosi",
 	booktitle = "Proceedings of the Third Berkeley Symposium on Mathematical Statistics and Probability, Volume 2: Contributions to Probability Theory",
-	pages = "125--132",
+	pages = "125–132",
 	publisher = "University of California Press",
 	title = "Isotropic Random Current",
 	url = "https://projecteuclid.org/euclid.bsmsp/1200502010",
@@ -132,7 +132,7 @@
 	fjournal = "Memoirs of the College of Science, University of Kyoto. Series A: Mathematics",
 	journal = "Mem. College Sci. Univ. Kyoto Ser. A Math.",
 	number = "3",
-	pages = "209--223",
+	pages = "209–223",
 	publisher = "Duke University Press",
 	title = "Stationary random distributions",
 	url = "https://doi.org/10.1215/kjm/1250777359",
@@ -145,7 +145,7 @@
 	fjournal = "Memoirs of the College of Science, University of Kyoto. Series A: Mathematics",
 	journal = "Mem. College Sci. Univ. Kyoto Ser. A Math.",
 	number = "1",
-	pages = "81--85",
+	pages = "81–85",
 	publisher = "Duke University Press",
 	title = "Stochastic Differential Equations in a Differentiable Manifold (2)",
 	url = "https://doi.org/10.1215/kjm/1250777513",
@@ -159,7 +159,7 @@
 	journal = "J. Math. Soc. Japan",
 	month = "05",
 	number = "1",
-	pages = "157--169",
+	pages = "157–169",
 	publisher = "Mathematical Society of Japan",
 	title = "Multiple Wiener Integral",
 	url = "https://doi.org/10.2969/jmsj/00310157",
@@ -170,7 +170,7 @@
 	author = "Itô, Kiyosi",
 	fjournal = "Nagoya Mathematical Journal",
 	journal = "Nagoya Math. J.",
-	pages = "55--65",
+	pages = "55–65",
 	publisher = "Nagoya Mathematical Journal",
 	title = "On a formula concerning stochastic differentials",
 	url = "https://projecteuclid.org:443/euclid.nmj/1118799221",
@@ -181,7 +181,7 @@
 	author = "Itô, Kiyosi",
 	fjournal = "Nagoya Mathematical Journal",
 	journal = "Nagoya Math. J.",
-	pages = "35--47",
+	pages = "35–47",
 	publisher = "Nagoya Mathematical Journal",
 	title = "Stochastic differential equations in a differentiable manifold",
 	url = "https://projecteuclid.org:443/euclid.nmj/1118764702",
@@ -194,7 +194,7 @@
 	fjournal = "Proceedings of the Japan Academy",
 	journal = "Proc. Japan Acad.",
 	number = "8",
-	pages = "4--10",
+	pages = "4–10",
 	publisher = "The Japan Academy",
 	title = "Brownian motions in a Lie group",
 	url = "https://doi.org/10.3792/pja/1195571633",
@@ -207,7 +207,7 @@
 	fjournal = "Proceedings of the Japan Academy",
 	journal = "Proc. Japan Acad.",
 	number = "2",
-	pages = "32--35",
+	pages = "32–35",
 	publisher = "The Japan Academy",
 	title = "On a stochastic integral equation",
 	url = "https://doi.org/10.3792/pja/1195572371",
@@ -220,7 +220,7 @@
 	fjournal = "Proceedings of the Imperial Academy",
 	journal = "Proc. Imp. Acad.",
 	number = "10",
-	pages = "694--700",
+	pages = "694–700",
 	publisher = "The Japan Academy",
 	title = "On student's test",
 	url = "https://doi.org/10.3792/pia/1195572704",
@@ -233,7 +233,7 @@
 	fjournal = "Proceedings of the Imperial Academy",
 	journal = "Proc. Imp. Acad.",
 	number = "8",
-	pages = "519--524",
+	pages = "519–524",
 	publisher = "The Japan Academy",
 	title = "Stochastic integral",
 	url = "https://doi.org/10.3792/pia/1195572786",
@@ -246,7 +246,7 @@
 	fjournal = "Proceedings of the Imperial Academy",
 	journal = "Proc. Imp. Acad.",
 	number = "4",
-	pages = "199--202",
+	pages = "199–202",
 	publisher = "The Japan Academy",
 	title = "On the normal stationary process with no hysteresis",
 	url = "https://doi.org/10.3792/pia/1195573043",
@@ -259,7 +259,7 @@
 	fjournal = "Proceedings of the Imperial Academy",
 	journal = "Proc. Imp. Acad.",
 	number = "4",
-	pages = "203--209",
+	pages = "203–209",
 	publisher = "The Japan Academy",
 	title = "A screw line in Hilbert space and its application to the probability theory",
 	url = "https://doi.org/10.3792/pia/1195573044",
@@ -272,7 +272,7 @@
 	fjournal = "Proceedings of the Imperial Academy",
 	journal = "Proc. Imp. Acad.",
 	number = "3",
-	pages = "120--122",
+	pages = "120–122",
 	publisher = "The Japan Academy",
 	title = "A kinematic theory of turbulence",
 	url = "https://doi.org/10.3792/pia/1195573107",
@@ -285,7 +285,7 @@
 	fjournal = "Proceedings of the Imperial Academy",
 	journal = "Proc. Imp. Acad.",
 	number = "2",
-	pages = "54--55",
+	pages = "54–55",
 	publisher = "The Japan Academy",
 	title = "On the ergodicity of a certain stationary process",
 	url = "https://doi.org/10.3792/pia/1195573148",
