--- a/math/large-deviations.bib
+++ b/math/large-deviations.bib
@@ -33,7 +33,7 @@
 	journal = {Transactions of the American Mathematical Society},
 	year = {1966}
 	number = {1},
-	pages = {63--85},
+	pages = {63–85},
 	publisher = {American Mathematical Society},
 	title = {Some Asymptotic Formulas for Wiener Integrals},
 	volume = {125},
