--- a/math/talks/env-talks.tex
+++ b/math/talks/env-talks.tex
@@ -88,6 +88,7 @@
 \usebtxdataset[../bib.bib]
 \usebtxdataset[../Itô.bib]
 \usebtxdataset[../Kuo-integral.bib]
+\usebtxdataset[../large-deviations.bib]
 \usebtxdefinitions[apa]    % apa or aps
 % Use \cite[short][#key] to get XXX19 type citations
 
