--- a/math/Kuo-integral.bib
+++ b/math/Kuo-integral.bib
@@ -90,13 +90,26 @@
 	author = {Kuo, Hui-Hsiung and Sae-Tang, Anuwat and Szozda, Benedykt},
 	title = {And isometry formula for a new stochastic integral},
 	booktitle = {Quantum Probability and Related Topics},
-	pages = {222--232},
+	pages = {222–232},
 	year = 2013,
 	volume = 29,
 	doi = {10.1142/9789814447546_0014},
 	URL = {https://www.worldscientific.com/doi/abs/10.1142/9789814447546_0014},
 	eprint = {https://www.worldscientific.com/doi/pdf/10.1142/9789814447546_0014},
 	abstract = {The isometry formula for the Itô integral is generalized to a new stochastic integral involving both adapted and instantly independent stochastic processes. The proof is rather elementary. An example is given to illustrate the isometry formula.}}
+
+
+@inbook{KuoSaeTangSzozda2012,
+	author = {Kuo, Hui-Hsiung and Sae-Tang, Anuwat and Szozda, Benedykt},
+	title = {A stochastic integral for adapted and instantly independent stochastic processes},
+	booktitle = {Stochastic Processes, Finance and Control},
+	pages = {53–71},
+	year = 2012,
+	volume = 29,
+	doi = {10.1142/9789814383318_0003},
+	URL = {https://www.worldscientific.com/doi/abs/10.1142/9789814383318_0003},
+	eprint = {https://www.worldscientific.com/doi/pdf/10.1142/9789814383318_0003},
+    abstract = { Abstract We introduce a new class of stochastic processes, called near-martingales, which arise in the study of a new stochastic integral defined by Ayed and Kuo. We obtain a special version of the Itô isometry for this new stochastic integral of certain instantly independent stochastic processes. We also prove a formula that allows us to express the new integral in terms of the classical Itô and Riemann integrals.}}
 
 @article{KuoSaeTangSzozda2012,
 	author = {Kuo, Hui-Hsiung Sae-Tang, Anuwat and Szozda, Benedykt},
@@ -117,7 +130,7 @@
 	volume = 16,
 	number = 32,
 	issue = 1,
-	pages = {17--28},
+	pages = {17–28},
 	url = {http://mi.mathnet.ru/thsp56}}
 
 @article{AyedKuo2008,
