--- a/math/bib.bib
+++ b/math/bib.bib
@@ -64,3 +64,13 @@
 | Papers |
 *--------*
 
+@article{Girsanov1960,
+	author = {Girsanov, I. V.},
+	title = {On Transforming a Certain Class of Stochastic Processes by Absolutely Continuous Substitution of Measures},
+	year = 1960,
+	journal = {Theory of Probability & Its Applications},
+	volume = 5,
+	issue = 3,
+	pages = {285–301},
+	doi = {10.1137/1105027},
+	url = {https://ece.uwaterloo.ca/~ece784/girsanov.1960paper.pdf}}
