* talk20190405: + def: martingale and Markov

--- a/math/talks/env-talks.tex
+++ b/math/talks/env-talks.tex
@@ -233,6 +233,11 @@
 	list=all,
 	listtext={Definition }]
 
+\defineenumeration [remark] [mathematicalstatement] [
+	text=Remark,
+	list=all,
+	listtext={Remark }]
+
 \defineenumeration [proof] [mathematicalstatement] [
 	text=Proof,
 	title=no,
